Fixed button spacing

--- a/src/components/CommunityNavigation/styles.scss
+++ b/src/components/CommunityNavigation/styles.scss
@@ -36,7 +36,7 @@
                 padding: 5px 10px;
                 font-size: 14px;
                 span {
-                    margin-right: 5px;
+                    margin-right: 4px;
                 }
             }
         }
